# pose_kidnapper

./: CMakeLists.txt  README.md  package.xml
config/: param.yaml
launch/: random_kidnap.launch
src/: random_kidnap.cpp
